force-app/main/default/objects/ARF_Templates__c/ARF_Templates__c.object-meta.xml
<CustomObject>
    <label>ARF - Template</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>ARF - Templates  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARF - Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>