force-app/main/default/objects/ARF_Templates__c/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <formula>ARF_Template__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>