force-app/main/default/objects/ARF_Templates__c/fields/ARF_Template__c.field-meta.xml
<CustomField>
    <fullName>ARF_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ARF - Template</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ARF - Templates</relationshipLabel>
    <relationshipName>ARF_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>