force-app/main/default/objects/ARF_Templates__c/fields/Check_if_PMS_match__c.field-meta.xml
<CustomField>
    <fullName>Check_if_PMS_match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if PMS match</label>
    <type>Checkbox</type>
</CustomField>