force-app/main/default/objects/ARF_Templates__c/fields/First_Print_Location__c.field-meta.xml
<CustomField>
    <fullName>First_Print_Location__c</fullName>
    <label>First Print Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>