force-app/main/default/objects/ARF_Templates__c/fields/Garment_Color__c.field-meta.xml
<CustomField>
    <fullName>Garment_Color__c</fullName>
    <label>Garment Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>