force-app/main/default/objects/ARF_Templates__c/fields/Number_of_Inks_First__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Inks_First__c</fullName>
    <label>Number of Inks? (First)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>