force-app/main/default/objects/ARF_Templates__c/fields/Number_of_Inks_Second__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Inks_Second__c</fullName>
    <label>Number of Inks? (Second)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>