force-app/main/default/objects/ARF_Templates__c/fields/Opportunity_C__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity__C</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ARF - Templates (Opportunity__C)</relationshipLabel>
    <relationshipName>ARF_Templates2</relationshipName>
    <type>Lookup</type>
</CustomField>