force-app/main/default/objects/ARF_Templates__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Number</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ARF - Templates (Opportunity Number)</relationshipLabel>
    <relationshipName>ARF_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>