force-app/main/default/objects/ARF_Templates__c/fields/Ordering_more_than_1_color__c.field-meta.xml
<CustomField>
    <fullName>Ordering_more_than_1_color__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordering more than 1 color?</label>
    <type>Checkbox</type>
</CustomField>