force-app/main/default/objects/ARF_Templates__c/fields/Second_Print_Location__c.field-meta.xml
<CustomField>
    <fullName>Second_Print_Location__c</fullName>
    <label>Second Print Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>