force-app/main/default/objects/ARF_Templates__c/fields/Second_Print_Location_Summary__c.field-meta.xml
<CustomField>
    <fullName>Second_Print_Location_Summary__c</fullName>
    <label>Second Print Location Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>