force-app/main/default/objects/ARF_Templates__c/fields/Set_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Type__c</fullName>
    <label>Set Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>