force-app/main/default/objects/ARF_Templates__c/fields/Shirt_Color_ARF__c.field-meta.xml
<CustomField>
    <fullName>Shirt_Color_ARF__c</fullName>
    <label>Shirt Color ARF</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Color</valueSetName>
    </valueSet>
</CustomField>