force-app/main/default/objects/ARF_Templates__c/fields/Smallest_Size__c.field-meta.xml
<CustomField>
    <fullName>Smallest_Size__c</fullName>
    <label>Smallest Size being Ordered?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>