force-app/main/default/objects/ARF_Templates__c/fields/Template_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Group_Name__c</fullName>
    <label>Template Group Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>