force-app/main/default/objects/ARF_Templates__c/fields/Template_Headline__c.field-meta.xml
<CustomField>
    <fullName>Template_Headline__c</fullName>
    <label>Template Headline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>