force-app/main/default/objects/ARF_Templates__c/fields/Template_Number_Template__c.field-meta.xml
<CustomField>
    <fullName>Template_Number_Template__c</fullName>
    <label>Template Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>