force-app/main/default/objects/ARF_Templates__c/fields/Template_Verse_Ref__c.field-meta.xml
<CustomField>
    <fullName>Template_Verse_Ref__c</fullName>
    <label>Template Verse Ref.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>