force-app/main/default/objects/ARF_Templates__c/fields/Third_Print_Location__c.field-meta.xml
<CustomField>
    <fullName>Third_Print_Location__c</fullName>
    <label>Third Print Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>