force-app/main/default/objects/ARF_Templates__c/fields/Third_Print_Location_Summary__c.field-meta.xml
<CustomField>
    <fullName>Third_Print_Location_Summary__c</fullName>
    <label>Third Print Location Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>