force-app/main/default/objects/ARF_Templates__c/fields/What_color_inks_Third__c.field-meta.xml
<CustomField>
    <fullName>What_color_inks_Third__c</fullName>
    <label>What color inks?(Third)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>