force-app/main/default/objects/ARF_Templates__c/fields/What_Kind_of_Art__c.field-meta.xml
<CustomField>
    <fullName>What_Kind_of_Art__c</fullName>
    <label>Garment Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>