force-app/main/default/objects/ARF_Templates__c/fields/What_Kind_of_Art_Template__c.field-meta.xml
<CustomField>
    <fullName>What_Kind_of_Art_Template__c</fullName>
    <label>What Kind of Art?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>